# bos-agent-gateway

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
app/: database.py  dependencies.py  main.py  models.py  settings.py
app/routers/: a2a.py  agents.py  proxy.py  sessions.py  stats.py  users.py
app/services/: agent_card.py  dify.py  health.py  proxy.py  rate_limiter.py  redis.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  api.js  index.css  main.jsx
frontend/src/pages/: AgentDetail.jsx  Agents.jsx  Dashboard.jsx  Users.jsx
