[project]
name = "bos-agent-gateway"
version = "0.1.0"
description = "BOS Agent Gateway — production-grade FastAPI A2A Agent Gateway"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "aiosqlite",
    "sqlalchemy[asyncio]",
    "pydantic-settings",
    "a2a-sdk",
]

[dependency-groups]
dev = [
    "ruff",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "ASYNC"]
ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"
